--- a/NationalDish/Storyboards/Base.lproj/Main.storyboard
+++ b/NationalDish/Storyboards/Base.lproj/Main.storyboard
@@ -78,6 +78,33 @@
             </objects>
             <point key="canvasLocation" x="2874.4000000000001" y="-663.41829085457277"/>
         </scene>
+        <!--Edit Dish-->
+        <scene sceneID="8LV-dc-mQW">
+            <objects>
+                <viewController storyboardIdentifier="EditDishViewController" id="XiU-SX-raM" customClass="EditDishViewController" customModule="NationalDish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ALv-iU-RZc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="XHI-Bh-FfV"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Edit Dish" id="qeD-wZ-uqa">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="W0w-Hs-dCH">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="XiU-SX-raM" id="LfI-Ks-JcB"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="mCb-Ml-6fA">
+                            <connections>
+                                <action selector="saveEditButtonPressed:" destination="XiU-SX-raM" id="pkO-Ai-lsy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vEp-Eo-8Zc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4606" y="-663"/>
+        </scene>
         <!--National Dishes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -216,6 +243,7 @@
                         <outlet property="dishDescriptionLabel" destination="76M-LM-1n4" id="KPh-ft-VZC"/>
                         <outlet property="dishImageView" destination="qMM-cu-SHs" id="TdT-q4-Bah"/>
                         <outlet property="displayNameLabel" destination="jiV-HY-EBe" id="Ueh-VT-Ord"/>
+                        <segue destination="qkV-30-T2W" kind="presentation" identifier="Show Edit Dish" id="0Ng-ve-dvi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XiX-6h-P75" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -257,11 +285,39 @@
                     <navigationItem key="navigationItem" title="Profile" id="PUn-AP-CDL"/>
                     <connections>
                         <outlet property="tableView" destination="OCl-8c-XCP" id="r78-cu-N9U"/>
+                        <segue destination="hPI-H9-q9H" kind="presentation" identifier="Show Edit Profile" id="xH8-jA-o4G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4B-Ex-18B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1933.5999999999999" y="757.87106446776613"/>
+        </scene>
+        <!--Edit Profile-->
+        <scene sceneID="CQb-In-cwS">
+            <objects>
+                <viewController id="Bxk-w3-5qJ" customClass="EditProfileViewController" customModule="NationalDish" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HCS-m1-fnN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="D4l-Jc-BIo"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Edit Profile" id="MWu-aH-elf">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="yGZ-0m-Fwh">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="Bxk-w3-5qJ" id="1hp-Aj-ukW"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="S7y-KB-Z8f">
+                            <connections>
+                                <action selector="saveEditProfileButtonPressed:" destination="Bxk-w3-5qJ" id="2de-Pk-hUR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hJf-Nc-m7f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2826" y="1462"/>
         </scene>
         <!--National Dishes-->
         <scene sceneID="u2c-vl-t0T">
@@ -338,10 +394,46 @@
             </objects>
             <point key="canvasLocation" x="1934" y="-663"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="28n-Sq-HSZ">
+            <objects>
+                <navigationController storyboardIdentifier="EditDishNavController" automaticallyAdjustsScrollViewInsets="NO" id="qkV-30-T2W" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dNC-23-mvu">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="XiU-SX-raM" kind="relationship" relationship="rootViewController" id="MOM-RD-Zko"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ate-yp-DF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3708" y="-663"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YwG-1j-qp8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hPI-H9-q9H" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dTk-VH-LKK">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Bxk-w3-5qJ" kind="relationship" relationship="rootViewController" id="8OP-Cr-9vV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6zA-Me-Svo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1935" y="1462"/>
+        </scene>
     </scenes>
     <resources>
         <image name="dish-icon" width="21.75" height="21.75"/>
-        <image name="more-info-circle" width="37.5" height="37.5"/>
+        <image name="more-info-circle" width="21.75" height="21.75"/>
         <image name="placeholder-image" width="512" height="512"/>
         <image name="profile-icon" width="29" height="29"/>
     </resources>
